--- a/crates/trust-hir/Cargo.toml
+++ b/crates/trust-hir/Cargo.toml
@@ -16,6 +16,7 @@ indexmap.workspace = true
 thiserror.workspace = true
 tracing.workspace = true
 text-size.workspace = true
+rowan.workspace = true
 
 [dev-dependencies]
 expect-test.workspace = true
