Checkpoint: consolidate pending Salsa hardening and runtime/UI updates

--- a/crates/trust-hir/Cargo.toml
+++ b/crates/trust-hir/Cargo.toml
@@ -17,6 +17,7 @@ thiserror.workspace = true
 tracing.workspace = true
 text-size.workspace = true
 rowan.workspace = true
+parking_lot.workspace = true
 
 [dev-dependencies]
 expect-test.workspace = true
