Run VS Code extension tests under xvfb in CI

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -144,8 +144,12 @@ jobs:
       - name: Build trust-lsp test server
         run: cargo build -p trust-lsp
         working-directory: ${{ github.workspace }}
+      - name: Install virtual display dependencies
+        run: |
+          sudo apt-get update
+          sudo apt-get install -y xvfb
       - name: Run extension integration tests
-        run: npm test
+        run: xvfb-run -a npm test
         env:
           ST_LSP_TEST_SERVER: ${{ github.workspace }}/target/debug/trust-lsp
       - name: Mark gate success
