Retry matrix tests and upload per-OS logs in CI

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -67,7 +67,30 @@ jobs:
       - uses: Swatinem/rust-cache@v2
       - run: cargo build --all-targets
       - run: cargo test -p trust-runtime --test complete_program
-      - run: cargo test --all-targets
+      - name: Run full test suite
+        shell: bash
+        run: |
+          set -euo pipefail
+          mkdir -p gate-artifacts
+          LOG_PATH="gate-artifacts/test-${{ matrix.os }}.log"
+          : > "${LOG_PATH}"
+          for attempt in 1 2; do
+            echo "=== full test suite attempt ${attempt}/2 (${{ matrix.os }}) ===" | tee -a "${LOG_PATH}"
+            if cargo test --all-targets 2>&1 | tee -a "${LOG_PATH}"; then
+              exit 0
+            fi
+            if [[ "${attempt}" -lt 2 ]]; then
+              echo "Attempt ${attempt} failed; retrying once..." | tee -a "${LOG_PATH}"
+            fi
+          done
+          echo "Full test suite failed after 2 attempts." | tee -a "${LOG_PATH}"
+          exit 1
+      - name: Upload test suite log
+        if: ${{ always() }}
+        uses: actions/upload-artifact@v4
+        with:
+          name: test-log-${{ matrix.os }}
+          path: gate-artifacts/test-${{ matrix.os }}.log
       - name: Mark gate success
         if: ${{ success() }}
         shell: bash
