feat: ship EtherCAT backend v1 and browser analysis WASM spike

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,10 +7,11 @@ members = [
     "crates/trust-ide",
     "crates/trust-lsp",
     "crates/trust-runtime",
+    "crates/trust-wasm-analysis",
 ]
 
 [workspace.package]
-version = "0.7.7"
+version = "0.7.8"
 edition = "2021"
 license = "MIT OR Apache-2.0"
 repository = "https://github.com/johannesPettersson80/trust-platform"
@@ -45,6 +46,7 @@ qrcode = "0.14"
 urlencoding = "2"
 percent-encoding = "2"
 roxmltree = "0.20"
+wasm-bindgen = "0.2"
 
 # Error handling
 thiserror = "1"
