--- a/crates/trust-runtime/Cargo.toml
+++ b/crates/trust-runtime/Cargo.toml
@@ -41,8 +41,11 @@ sha2 = "0.10"
 rustls = "0.20"
 rustls-pemfile = "0.2.1"
 opcua = { version = "0.12", default-features = false, features = ["server", "client", "vendored-openssl"], optional = true }
+ethercrab = { version = "0.6", optional = true }
+tokio = { workspace = true, optional = true }
 
 [features]
-default = ["debug"]
+default = ["debug", "ethercat-wire"]
 debug = []
 opcua-wire = ["dep:opcua"]
+ethercat-wire = ["dep:ethercrab", "dep:tokio"]
