--- a/editors/vscode/tsconfig.json
+++ b/editors/vscode/tsconfig.json
@@ -12,5 +12,9 @@
     "skipLibCheck": true
   },
   "include": ["src"],
-  "exclude": ["node_modules", ".vscode-test"]
+  "exclude": [
+    "node_modules",
+    ".vscode-test",
+    "src/statechart/webview/**"
+  ]
 }
