feat(web-ide): ship browser wasm demo and GitHub Pages deployment

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -246,6 +246,36 @@ jobs:
           name: gate-docs
           path: gate-artifacts/docs.txt
 
+  browser-analysis:
+    name: Browser Analysis Gates
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v4
+      - uses: dtolnay/rust-toolchain@stable
+      - uses: Swatinem/rust-cache@v2
+      - uses: actions/setup-node@v4
+        with:
+          node-version: '20'
+      - name: Install wasm target
+        run: rustup target add wasm32-unknown-unknown
+      - name: Run parity + latency + memory + incremental gates
+        run: ./scripts/check_mp010_browser_analysis.sh
+      - name: Run browser host smoke gate
+        run: ./scripts/check_browser_analysis_host_smoke.sh
+      - name: Run worker recovery gate
+        run: ./scripts/check_browser_analysis_worker_recovery.sh
+      - name: Mark gate success
+        if: ${{ success() }}
+        run: |
+          mkdir -p gate-artifacts
+          echo "job=browser-analysis result=success" > gate-artifacts/browser-analysis.txt
+      - name: Upload gate marker
+        if: ${{ success() }}
+        uses: actions/upload-artifact@v4
+        with:
+          name: gate-browser-analysis
+          path: gate-artifacts/browser-analysis.txt
+
   vscode-extension:
     name: VS Code Extension
     runs-on: ubuntu-latest
@@ -391,7 +421,7 @@ jobs:
   release-gate-report:
     name: Release Gate Report
     runs-on: ubuntu-latest
-    needs: [fmt, clippy, test, msrv, docs, vscode-extension, editor-expansion, mp001-parity, version-release-guard]
+    needs: [fmt, clippy, test, msrv, docs, browser-analysis, vscode-extension, editor-expansion, mp001-parity, version-release-guard]
     if: ${{ always() }}
     steps:
       - uses: actions/checkout@v4
@@ -413,6 +443,7 @@ jobs:
           NEED_TEST: ${{ needs.test.result }}
           NEED_MSRV: ${{ needs.msrv.result }}
           NEED_DOCS: ${{ needs.docs.result }}
+          NEED_BROWSER_ANALYSIS: ${{ needs['browser-analysis'].result }}
           NEED_VSCODE_EXTENSION: ${{ needs['vscode-extension'].result }}
           NEED_EDITOR_EXPANSION: ${{ needs['editor-expansion'].result }}
           NEED_MP001_PARITY: ${{ needs['mp001-parity'].result }}
@@ -428,6 +459,7 @@ jobs:
             --required-gate gate-test-windows-latest \
             --required-gate gate-msrv \
             --required-gate gate-docs \
+            --required-gate gate-browser-analysis \
             --required-gate gate-vscode-extension \
             --required-gate gate-editor-expansion \
             --required-gate gate-mp001-parity \
@@ -437,6 +469,7 @@ jobs:
             --job-status "test=${NEED_TEST}" \
             --job-status "msrv=${NEED_MSRV}" \
             --job-status "docs=${NEED_DOCS}" \
+            --job-status "browser-analysis=${NEED_BROWSER_ANALYSIS}" \
             --job-status "vscode-extension=${NEED_VSCODE_EXTENSION}" \
             --job-status "editor-expansion=${NEED_EDITOR_EXPANSION}" \
             --job-status "mp001-parity=${NEED_MP001_PARITY}" \
