--- a/crates/trust-runtime/Cargo.toml
+++ b/crates/trust-runtime/Cargo.toml
@@ -10,8 +10,11 @@ rust-version.workspace = true
 [dependencies]
 trust-syntax.workspace = true
 trust-hir.workspace = true
+trust-ide.workspace = true
+trust-wasm-analysis.workspace = true
 smol_str.workspace = true
 rustc-hash.workspace = true
+text-size.workspace = true
 indexmap = { workspace = true, features = ["serde"] }
 thiserror.workspace = true
 tracing.workspace = true
