--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,7 +11,7 @@ members = [
 ]
 
 [workspace.package]
-version = "0.9.3"
+version = "0.9.5"
 edition = "2021"
 license = "MIT OR Apache-2.0"
 repository = "https://github.com/johannesPettersson80/trust-platform"
@@ -80,6 +80,7 @@ trust-syntax = { path = "crates/trust-syntax" }
 trust-hir = { path = "crates/trust-hir" }
 trust-ide = { path = "crates/trust-ide" }
 trust-runtime = { path = "crates/trust-runtime" }
+trust-wasm-analysis = { path = "crates/trust-wasm-analysis" }
 
 [workspace.lints.rust]
 unsafe_code = "forbid"
