--- a/examples/plant_demo/runtime.toml
+++ b/examples/plant_demo/runtime.toml
@@ -11,7 +11,7 @@ mode = "production"
 debug_enabled = false
 
 [runtime.web]
-enabled = false
+enabled = true
 listen = "127.0.0.1:8080"
 auth = "local"
 tls = false
