fix(ci): track browser worker recovery fixture and document web ide

--- a/.gitignore
+++ b/.gitignore
@@ -63,6 +63,7 @@ docs/internal/prototypes/browser_analysis_wasm_spike/web/*
 !docs/internal/prototypes/browser_analysis_wasm_spike/web/main.js
 !docs/internal/prototypes/browser_analysis_wasm_spike/web/worker.js
 !docs/internal/prototypes/browser_analysis_wasm_spike/web/analysis-client.js
+!docs/internal/prototypes/browser_analysis_wasm_spike/web/analysis-client.test.mjs
 !docs/internal/prototypes/browser_analysis_wasm_spike/web/openplc-shell.html
 !docs/internal/prototypes/browser_analysis_wasm_spike/web/openplc-shell.js
 !docs/internal/prototypes/browser_analysis_wasm_spike/npm/
@@ -87,5 +88,6 @@ docs/internal/testing/evidence/*
 !docs/internal/testing/evidence/web-ide-migration-parity-2026-02-15.md
 !docs/internal/testing/evidence/web-ide-accessibility-validation-2026-02-15.md
 !docs/internal/testing/evidence/web-ide-performance-gates-2026-02-15.md
+!docs/internal/testing/evidence/web-ide-full-checklist-evidence-2026-02-15.md
 CLAUDE.md
 AGENTS.md
